agregado npm run proxy para poder usar api rest

--- a/src/app/test-library/form-controls-example/form-controls-example.component.html
+++ b/src/app/test-library/form-controls-example/form-controls-example.component.html
@@ -29,7 +29,7 @@
             (valueChanges)="autocompleteChange($event)"
             [isLoading]="autocompleteLoading"
             (focusout)="blurInput($event)">
-            (itemSelectedEvent)="itemSelected($event)"
+            (itemSelectedEvent)="itemSelected($event)">
         </ngx-core-form-control>
         <div class="p mb-4">
             <strong>Value:</strong><span>{{ inputAutocomplete.getValue() }}</span>
