--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,46 @@
-<router-outlet></router-outlet>
+    <mat-sidenav-container class="h-100">
+        <mat-sidenav #sidenav role="navigation">
+            <mat-nav-list>
+                <a mat-list-item routerLink="/test/form-example" (click)="sidenav.close()" color="primary">
+                    <mat-icon>description</mat-icon> <span class="nav-caption pl-3">Form</span>
+                </a>
+                <a mat-list-item routerLink="/test/form-controls-example" (click)="sidenav.close()" color="primary">
+                    <mat-icon>dynamic_form</mat-icon> <span class="nav-caption pl-3">Form Controls</span>   
+                </a>
+                <a mat-list-item routerLink="/test/control-features" (click)="sidenav.close()" color="primary">
+                    <mat-icon>build_circle</mat-icon><span class="nav-caption pl-3">Control Features</span>
+                </a>
+                <a mat-list-item routerLink="/test/table-example" (click)="sidenav.close()" color="primary">
+                    <mat-icon>table_rows</mat-icon><span class="nav-caption pl-3">Simple Table</span>
+                </a>
+                <a mat-list-item routerLink="/test/async-controls" (click)="sidenav.close()" color="primary">
+                    <mat-icon>play_for_work</mat-icon><span class="nav-caption pl-3">Async Form Controls</span>
+                </a>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            <mat-toolbar color="primary">
+                <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
+                  <mat-icon>menu</mat-icon>
+                </button>
+                <span>Ngx-Core-Library App Example</span>
+                <span class="example-spacer"></span>
+                <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+                    <mat-icon>favorite</mat-icon>
+                </button>
+                <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+                    <mat-icon>share</mat-icon>
+                </button>
+                <!--span class="example-spacer"></span>
+                <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+                  <mat-icon>favorite</mat-icon>
+                </button>
+                <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+                  <mat-icon>share</mat-icon>
+                </button-->
+              </mat-toolbar>
+          <main>
+            <router-outlet></router-outlet>
+          </main>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
